[package]
name = "merveille"
version = "0.0.0"
authors = ["Aaron Weiss <awe@pdgn.co>"]

[dependencies]
diesel = { version = "1.1", features = ["sqlite"] }
env_logger = "0.5"
failure = "0.1"
log = "0.4"
irc = { git = "https://github.com/aatxe/irc", branch = "develop", features = ["ctcp", "toml"] }
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
tokio-timer = "0.1"
