[package]
name = "awebot"
version = "0.2.0"
authors = ["Aaron Weiss <awe@pdgn.co>"]

[dependencies]
diesel = { version = "1.1", features = ["sqlite"] }
env_logger = "0.5"
failure = "0.1"
log = "0.4"
irc = { git = "https://github.com/aatxe/irc", branch = "develop", features = ["ctcp", "toml"] }
toml = "0.4"
tokio-timer = "0.1"
